--- a/views/user/collect.pug
+++ b/views/user/collect.pug
@@ -3,7 +3,7 @@ include ../mixins/topic_item
 include ../mixins/page
 
 block user_content
-    if (user._id.toString() === current_user._id.toString())
+    if (current_user && (user._id.toString() === current_user._id.toString()))
         if (collections.length != 0)
             each collect in collections
                 +topic_item(current_user,collect.topic,markdown)
